--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
         </div>
         <!-- Script -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
