--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <button id="new-quote">New Quote</button>
             </div>
         </div>
+        <!-- Loader -->
+        <div class="loader" id="loader"></div>
+
         <!-- Script -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
         <script src="script.js"></script>
